--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,103 +10,7 @@
       type="image/x-icon"
     />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #313131;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      .login-container {
-        width: 300px;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      }
-      .login-container h2 {
-        margin-top: 0;
-        margin-bottom: 20px;
-        text-align: center;
-      }
-      .form-group {
-        margin-bottom: 15px;
-      }
-      .form-group label {
-        display: block;
-        font-weight: bold;
-        margin-bottom: 5px;
-      }
-      .form-group input[type='email'],
-      .form-group input[type='password'] {
-        width: 100%;
-        padding: 8px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-        box-sizing: border-box;
-      }
-      .form-group input[type='submit'] {
-        width: 100%;
-        padding: 10px;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 3px;
-        cursor: pointer;
-      }
-      .form-group input[type='submit']:hover {
-        background-color: #0056b3;
-      }
-      .register-link {
-        text-align: center;
-      }
-      .register-link a {
-        color: #007bff;
-        text-decoration: none;
-      }
-      .register-link a:hover {
-        font-weight: bolder;
-      }
-      @keyframes shake {
-        0% {
-          transform: translateX(0);
-        }
-        10%,
-        90% {
-          transform: translateX(-5px);
-        }
-        20%,
-        80% {
-          transform: translateX(5px);
-        }
-        30%,
-        50%,
-        70% {
-          transform: translateX(-5px);
-        }
-        40%,
-        60% {
-          transform: translateX(5px);
-        }
-        100% {
-          transform: translateX(0);
-        }
-      }
-      .redButton {
-        animation: shake 0.5s ease-in-out;
-        background-color: rgba(241, 0, 0, 0.762) !important;
-        color: white !important;
-      }
-      .greenButton {
-        background-color: green !important;
-        color: white !important;
-      }
-    </style>
+    <link rel="stylesheet" href="../../css/login.css" />
   </head>
   <body>
     <div class="login-container">
@@ -134,52 +38,6 @@
         </p>
       </div>
     </div>
+    <script src="../../js/Login.js"></script>
   </body>
-  <script>
-    function mainPage() {
-      let email = document.getElementById('email');
-      console.log(email.value);
-      const data = { email: email.value };
-      fetch('http://localhost:3000/user/loginUser', {
-        method: 'post',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify(data),
-      })
-        .then((response) => {
-          if (!response.ok) {
-            // document.getElementById('submit').classList.add('redButton')
-            Swal.fire({
-              icon: 'error',
-              heightAuto: false,
-              width: '30%',
-              title: 'Oops...',
-              text: 'User not found...!. Register the user',
-              allowOutsideClick: false,
-              showConfirmButton: false, // Hide the "OK" button
-              timer: 1000, // Show the popup for 2 seconds
-            }).then(() => location.reload());
-          } else {
-            console.log('User registered successfully');
-            document.getElementById('submit').value = 'Successfully Loged In';
-            document.getElementById('submit').classList.add('greenButton');
-            Swal.fire({
-              title: 'LogIn Successfully!',
-              heightAuto: false,
-              width: '30%',
-              icon: 'success',
-              allowOutsideClick: false,
-              showConfirmButton: false, // Hide the "OK" button
-              timer: 1000, // Show the popup for 2 seconds
-            }).then(() =>
-              location.replace('http://localhost:3000/user-ui/allrecords'),
-            );
-          }
-        })
-        .catch((error) => {
-          console.log(error);
-        });
-    }
-  </script>
 </html>
