--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,13 +17,19 @@
       <h2>Login</h2>
       <!-- <form action="#" method="post"> -->
       <div class="form-group">
-        <label for="email">Email:</label>
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="ex.advikghatkar@email.com"
-        />
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="ex.advikghatkar@email.com"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" />
+        </div>
       </div>
       <div class="form-group">
         <input type="submit" id="submit" value="Sign In" onclick="mainPage()" />
