--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,11 +16,11 @@
     <div class="registration-container">
       <h2>Register</h2>
       <div class="form-group">
-        <label for="id">Id:</label>
+        <label for="id"><b>Id:</b></label>
         <input type="text" id="id" name="id" placeholder="ex.1,2,3" />
       </div>
       <div class="form-group">
-        <label for="name">Name:</label>
+        <label for="name"><b>Name:</b></label>
         <input
           type="text"
           id="name"
@@ -30,12 +30,32 @@
         />
       </div>
       <div class="form-group">
-        <label for="email">Email:</label>
+        <label for="email"><b>Email:</b></label>
         <input
           type="email"
           id="email"
           name="email"
           placeholder="ex.advikghatkar@email.com"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="password"><b>Password:</b></label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Enter password"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="confirm-password"><b>Confirm Password:</b></label>
+        <input
+          type="password"
+          id="confirm-password"
+          name="confirm-password"
+          placeholder="Confirm password"
           required
         />
       </div>
@@ -50,7 +70,7 @@
       <div class="register-link">
         <p>
           Already have an account?
-          <a href="http://localhost:3000/user-ui/login">Sign In</a>
+          <a href="http://localhost:3000/user-ui/login"><b>Sign In</b></a>
         </p>
       </div>
     </div>
